packages/svelte/tests/validator/samples/snippet-shadowing-prop/input.svelte
<script>
	import Component from "./Component.svelte";
</script>

<Component title="">
	{#snippet title()}
		title
	{/snippet}
</Component>